fixed card wrapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,6 @@ body {
 .card-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
 }
 
 .item-card {
